# AddisFlix

./: .replit  README.md  main.py  pyproject.toml  replit.md
static/: index.html  script.js  style.css
