[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "deep-translator>=1.11.4",
    "demucs>=4.0.1",
    "fastapi>=0.136.1",
    "gtts>=2.5.4",
    "gunicorn>=26.0.0",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "python-multipart>=0.0.29",
    "soundfile>=0.13.1",
    "torchcodec>=0.13.0",
    "uvicorn>=0.47.0",
    "whisper>=1.1.10",
]
